# AdvancedBot

./: README.md  chat.py  collection_management.py  config.py  document_management.py  main.py  pyproject.toml
data/: exchange_rates.json
utils/: cache.py  document_loader.py  document_splitter.py  emi_agent.py  forex_agent.py  retriever.py  vector_store.py
