[tool.poetry]
name = "chatbot-qa"
version = "0.1.0"
description = "Chatbot application using PDF and URL to answer questions."
authors = ["Subash Pandey <axlesubash111@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
langchain = "^0.2.6"
openai = "^1.35.10"
streamlit = "^1.36.0"
chromadb = "^0.5.3"
PyPDF2 = "^3.0.1"
pandas = "^2.2.2"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pymupdf = "^1.24.7"
fitz = "^0.0.1.dev2"
langchain-community = "^0.2.6"
tiktoken = "^0.7.0"
frontend = "^0.0.3"
langchain-openai = "^0.1.14"
protobuf = "3.20.3"
uuid = "^1.30"
faiss-cpu = "^1.8.0.post1"
pypdf = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


